# foodgram-project-react

./: .gitignore  README.md
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  db.json  docker-entrypoint.sh  pyproject.toml
backend/api_foodgram/: settings.py  urls.py
backend/apps/api/: filters.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/apps/recipes/: admin.py  models.py
backend/apps/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_remove_recipe_tags_delete_recipetagmap.py
backend/apps/shopping_carts/: admin.py  models.py
backend/apps/shopping_carts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_shoppingcart_recipes_and_more.py
backend/apps/users/: admin.py  models.py
backend/apps/users/migrations/: 0001_initial.py  0002_remove_user_followings_delete_followerfollowingmap.py
infra/: docker-compose.yml  nginx.conf
